# KODO

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
api/routers/: __init__.py  ask.py  health.py  query.py  repos.py
core/: __init__.py
core/analysis/: __init__.py  dataflow.py  impact.py  metrics.py  models.py  patterns.py
core/embeddings/: __init__.py  chunker.py  client.py  models.py  search.py  store.py
core/graph/: __init__.py  connection.py  models.py  queries.py  store.py  utils.py
core/ingestion/: __init__.py  diff.py  discovery.py  models.py  pipeline.py  repo.py
core/llm/: __init__.py  client.py  context.py  prompts.py
core/parser/: __init__.py  base.py  models.py  tree_sitter.py
core/parser/languages/: __init__.py  base.py  python.py
core/query/: __init__.py  engine.py  handlers.py  models.py  router.py
extension/: .eslintrc.json  README.md  package.json
extension/src/: extension.ts
extension/src/api/: client.ts  types.ts
extension/src/commands/: index.ts
extension/src/providers/: codeLensProvider.ts  hoverProvider.ts
extension/src/test/: runTest.ts
extension/src/test/suite/: extension.test.ts  index.ts
extension/src/views/: chatPanel.ts  statusView.ts
integrations/: __init__.py
integrations/github/: __init__.py  client.py  models.py  pr_review.py  webhooks.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_embeddings.py  test_github.py  test_graph.py  test_ingestion.py  test_llm.py  test_parser.py  test_query.py
web/: .gitignore  README.md  index.html  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
web/src/pages/: Analytics.tsx  Chat.tsx  Dashboard.tsx  Explorer.tsx  Graph.tsx  Repositories.tsx  index.ts
web/src/store/: index.ts
web/src/types/: index.ts
